[package]
name = "grumble-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
chrono = "0.4"
diesel = { version = "2.0.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
env_logger = "0.10"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
uuid = "1.3.3"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.40"
actix-web-httpauth = "0.8.0"
